fix: stats component visible when should not style: improved

--- a/src/app/expense/stats/stats.component.css
+++ b/src/app/expense/stats/stats.component.css
@@ -13,12 +13,23 @@
 .stats-list {
   width: 100%;
   text-align: start;
+  border: solid 1px #000;
+  border-radius: 8px;
+  overflow-x: auto;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+tr {
+  width: 100%;
+}
+
+td {
+  width: 50%;
 }
 
 th,
@@ -36,4 +47,12 @@ th {
 
 tr:hover {
   background-color: #f5f5f5;
+}
+
+.no-expenses {
+  text-align: center;
+  padding: 30px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  color: #666;
 }
